tests/sources/invalid/match/match_syntax_errors.fire
// Malformed match expressions (pure syntax errors).
enum Shape {
    Dot,
    Line(len: float64)
}

s1: Shape = Shape.Dot;

// Missing scrutinee expression
z: int32 = match {  //~ ERROR FS-PARSE-0012 @18
//~^ ERROR FS-PARSE-0010 @19
//~^^ ERROR FS-PARSE-0010 @19
    _ -> 1  //~ ERROR FS-PARSE-0010 @5
};

// Missing '{' to start match body
a: int32 = match s1 5;  //~ ERROR FS-PARSE-0010 @21
//~^ ERROR FS-PARSE-0010 @21

s2: Shape = Shape.Dot;

// Missing '->' after pattern
b: int32 = match s2 {
    _ 5  //~ ERROR FS-PARSE-0010 @7
};

s3: Shape = Shape.Dot;

// Pattern is not an identifier or '_'
c: int32 = match s3 {
    5 -> 1,  //~ ERROR FS-PARSE-0010 @5
    _ -> 2
};

s4: Shape = Shape.Dot;

// Missing '.' and variant after enum name
d: int32 = match s4 {
    Shape -> 1,  //~ ERROR FS-PARSE-0010 @11
    _ -> 2
};

s4b: Shape = Shape.Dot;

// Missing variant name after '.'
d2: int32 = match s4b {
    Shape. -> 1,  //~ ERROR FS-PARSE-0010 @12
    _ -> 2
};

s5: Shape = Shape.Dot;

// Missing local binding name after ':'
e: int32 = match s5 {
    Shape.Line(len:) -> 1,  //~ ERROR FS-PARSE-0010 @20
    _ -> 2
};

s6: Shape = Shape.Dot;

// Missing ')' to close pattern bindings
f: int32 = match s6 {
    Shape.Line(len -> 1,  //~ ERROR FS-PARSE-0010 @20
    _ -> 2
};

s7: Shape = Shape.Dot;

// Payload field name is not an identifier
h: int32 = match s7 {
    Shape.Line(5) -> 1,  //~ ERROR FS-PARSE-0010 @16
//~^ ERROR FS-PARSE-0010 @16
//~^^ ERROR FS-PARSE-0010 @16
    _ -> 2
};

s8: Shape = Shape.Dot;

// Missing arm body after '->'
g: int32 = match s8 {
    _ ->
};  //~ ERROR FS-PARSE-0012 @1
//~^ ERROR FS-PARSE-0010 @2
//~^^ ERROR FS-PARSE-0010 @3
//~^^^ ERROR FS-PARSE-0010 @3
